--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-gist
+  - jekyll-archives
 
 markdown:         kramdown
 highlighter:      rouge
